Fix #35 - Search box and 2nd level menu z-index issue

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1600,7 +1600,6 @@ body {
     top: 40px;
     right: 0;
     left: 0;
-    z-index: 1;
     background-color: rgba(255, 255, 255, 0.95);
   }
 }
