--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -32,7 +32,6 @@
     top: 40px;
     right: 0;
     left: 0;
-    z-index: 1;
     background-color: rgba(255,255,255,.95);
   }
 }
